--- a/gallery.html
+++ b/gallery.html
@@ -19,63 +19,67 @@
 		</ul>
 	</nav>
 
-	<section class="gallery-sec">
-		<p>Choose and download in mp4</p>
-		<div class="gallery-links">
-			<a href="#" class="cta">Sign Up / Log In</a>
-			<a href="#" class="cta">Pricing</a>
-		</div>
-
-		<div class="grid">
-
-			<div class="item">
-				<video class="item-video">
-					<source src="./static/gslike.mp4" type="video/mp4">
-				</video>
-				<ul>
-					<li>Item Title</li>
-					<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
-				</ul>
-			</div>
-			<div class="item">
-				<video class="item-video">
-					<source src="./static/gslike.mp4" type="video/mp4">
-				</video>
-				<ul>
-					<li>Item Title</li>
-					<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
-				</ul>
-			</div>
-			<div class="item">
-				<video class="item-video">
-					<source src="./static/gslike.mp4" type="video/mp4">
-				</video>
-				<ul>
-					<li>Item Title</li>
-					<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
-				</ul>
-			</div>
-			<div class="item">
-				<video class="item-video">
-					<source src="./static/gslike.mp4" type="video/mp4">
-				</video>
-				<ul>
-					<li>Item Title</li>
-					<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
-				</ul>
-			</div>
-			<div class="item">
-				<video class="item-video">
-					<source src="./static/gslike.mp4" type="video/mp4">
-				</video>
-				<ul>
-					<li>Item Title</li>
-					<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
-				</ul>
+	<main>
+		
+		<section class="gallery-sec">
+			<p>Choose and download in mp4</p>
+			<div class="gallery-links">
+				<a href="#" class="cta">Sign Up / Log In</a>
+				<a href="#" class="cta">Pricing</a>
 			</div>
 
-		</div>
-	</section>
+			<div class="grid">
+
+				<div class="item">
+					<video class="item-video">
+						<source src="./static/gslike.mp4" type="video/mp4">
+					</video>
+					<ul>
+						<li>Item Title</li>
+						<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<video class="item-video">
+						<source src="./static/gslike.mp4" type="video/mp4">
+					</video>
+					<ul>
+						<li>Item Title</li>
+						<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<video class="item-video">
+						<source src="./static/gslike.mp4" type="video/mp4">
+					</video>
+					<ul>
+						<li>Item Title</li>
+						<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<video class="item-video">
+						<source src="./static/gslike.mp4" type="video/mp4">
+					</video>
+					<ul>
+						<li>Item Title</li>
+						<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<video class="item-video">
+						<source src="./static/gslike.mp4" type="video/mp4">
+					</video>
+					<ul>
+						<li>Item Title</li>
+						<li><a class="btn" href="./static/gslike.mp4" target="__blank">Download</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</section>
+		
+	</main>
 
 	<footer>
 		<div class="footerlinks">
@@ -107,18 +111,7 @@
 			document.body.removeChild(downloadLink);
 		}
 	</script>
-	
-	<script type="text/javascript">
-		const navbtn = document.querySelector('#navbtn')
-		const navbar = document.querySelector('nav')
-		const outside = document.querySelector('section')
 
-		navbtn.addEventListener('click', function(){
-			navbar.style.width = '80%'
-		})
-		outside.addEventListener('click', function(){
-			navbar.style.width = '0'
-		})
-	</script>
+	<script src="./script.js"></script>
 </body>
 </html>
