--- a/pricing.html
+++ b/pricing.html
@@ -19,20 +19,24 @@
 		</ul>
 	</nav>
 
-	<section class="pricing-bg">
+	<main>
+		
+		<section class="pricing-bg">
 
-		<div class="pricing">
-			<img src="./static/image.png" alt="stripe img">
-			<h1>$5.00</h1>
-			<a href="#" class="cta">Log In</a>
-			<ul>
-				<li>One time payment</li>
-				<li>Get access to any asset</li>
-			</ul>
-		</div>
+			<div class="pricing">
+				<img src="./static/image.png" alt="stripe img">
+				<h1>$5.00</h1>
+				<a href="#" class="cta">Log In</a>
+				<ul>
+					<li>One time payment</li>
+					<li>Get access to any asset</li>
+				</ul>
+			</div>
 
-	</section>
+		</section>
 
+	</main>
+	
 	<footer>
 		<div class="footerlinks">
 			<a href="#">Home</a>
@@ -49,18 +53,7 @@
 			<button class="btn">Submit</button>
 		</form>
 	</footer>
-	
-	<script type="text/javascript">
-		const navbtn = document.querySelector('#navbtn')
-		const navbar = document.querySelector('nav')
-		const outside = document.querySelector('section')
 
-		navbtn.addEventListener('click', function(){
-			navbar.style.width = '80%'
-		})
-		outside.addEventListener('click', function(){
-			navbar.style.width = '0'
-		})
-	</script>
+	<script src="./script.js"></script>
 </body>
 </html>
